Clean up JDK21 build